--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 .carrusel{
       position: relative;
       left: 10vw;
-      background-color: blue;
+      background-color: rgb(0,147,244);
       width: 80vw;
       height: 93.3%;
       overflow: hidden;
